--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <script>
+        console.log("Hello Wordssss!!")
+    </script>
 </body>
 </html>
