--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script>
-        console.log("Hello Wordssss!!")
-    </script>
+    <script src="script.js"></script>
+    teste
 </body>
 </html>
